k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fsl-service
  namespace: production
spec:
  selector:
    app: fsl-app
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
